hexagonal architecture applied to SQLite classes